--- a/CustomMusic/CustomMusic.csproj
+++ b/CustomMusic/CustomMusic.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="CustomMusicMod.cs" />
     <Compile Include="LocationItem.cs" />
     <Compile Include="MusicContent.cs" />
