--- a/CustomShirts/manifest.json
+++ b/CustomShirts/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Add custom shirts to the game",
   "UniqueID": "Platonymous.CustomShirts",
   "EntryDll": "CustomShirts.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:2416" ],
   "Dependencies": [
     {
