--- a/CustomFurniture/manifest.json
+++ b/CustomFurniture/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Helper Mod for Custom Furniture creation.",
   "UniqueID": "Platonymous.CustomFurniture",
   "EntryDll": "CustomFurniture.dll",
-  "MinimumApiVersion": "2.8-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:1254" ],
   "Dependencies": [
     {
