--- a/CustomMusic/manifest.json
+++ b/CustomMusic/manifest.json
@@ -5,5 +5,6 @@
   "Description": "Changes the games music",
   "UniqueID": "Platonymous.CustomMusic",
   "EntryDll": "CustomMusic.dll",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:3043" ]
 }
