--- a/MuliplayerTweaks/manifest.json
+++ b/MuliplayerTweaks/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Tweaks Multiplayer",
   "UniqueID": "Platonymous.MuliplayerTweaks",
   "EntryDll": "MuliplayerTweaks.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:" ]
 }
