--- a/PelicanTTS/manifest.json
+++ b/PelicanTTS/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Text-To-Speech Mod",
   "UniqueID": "Platonymous.PelicanTTS",
   "EntryDll": "PelicanTTS.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:1079" ]
 }
