--- a/RingOfFire/manifest.json
+++ b/RingOfFire/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Unleash the Flames",
   "UniqueID": "Platonymous.RingOfFire",
   "EntryDll": "RingOfFire.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:1166" ],
   "Dependencies": [
     {
