--- a/SDVGameBoy/manifest.json
+++ b/SDVGameBoy/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Like playing GameBoy, but worse.. way worse",
   "UniqueID": "Platonymous.SDVGameBoy",
   "EntryDll": "SDVGameBoy.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:" ],
   "Dependencies": [
     {
