--- a/Speedster/manifest.json
+++ b/Speedster/manifest.json
@@ -5,7 +5,7 @@
   "Description": "To the outside world you are just an ordinary farmer, but secretly...",
   "UniqueID": "Platonymous.Speedster",
   "EntryDll": "Speedster.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9.0",
   "UpdateKeys": [ "Nexus:1102" ],
   "Dependencies": [
     {
