--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -6,7 +6,7 @@
   "UniqueID": "Platonymous.TMXLoader",
   "EntryDll": "TMXLoader.dll",
   "UpdateKeys": [ "Nexus:1820" ],
-  "MinimumApiVersion": "2.8-beta",
+  "MinimumApiVersion": "2.9.0",
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit",
