--- a/CFAutomate/manifest.json
+++ b/CFAutomate/manifest.json
@@ -1,11 +1,11 @@
 {
   "Name": "Custom Farming Automate Bridge",
   "Author": "Platonymous",
-  "Version": "1.0.1",
+  "Version": "2.10.1",
   "Description": "Allows Custom Farming to work with Automate",
   "UniqueID": "Platonymous.CFAutomate",
   "EntryDll": "CFAutomate.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.9",
   "UpdateKeys": [],
   "Dependencies": [
     {
