--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -55,6 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="config.json" />
+    <None Include="i18n\de.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="i18n\default.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
