--- a/CFAutomate/manifest.json
+++ b/CFAutomate/manifest.json
@@ -1,12 +1,12 @@
 {
   "Name": "Custom Farming Automate Bridge",
   "Author": "Platonymous",
-  "Version": "2.10.1",
+  "Version": "2.10.2",
   "Description": "Allows Custom Farming to work with Automate",
   "UniqueID": "Platonymous.CFAutomate",
   "EntryDll": "CFAutomate.dll",
   "MinimumApiVersion": "2.9",
-  "UpdateKeys": [],
+  "UpdateKeys": [ "Nexus:991" ],
   "Dependencies": [
     {
       "UniqueID": "Pathoschild.Automate"
