--- a/CustomFarmingRedux/CustomFarmingRedux.csproj
+++ b/CustomFarmingRedux/CustomFarmingRedux.csproj
@@ -45,7 +45,9 @@
     <Compile Include="CustomMachine.cs" />
     <Compile Include="CustomMachineBlueprint.cs" />
     <Compile Include="CustomObject.cs" />
+    <Compile Include="ICustomFarmingReduxAPI.cs" />
     <Compile Include="IngredientBlueprint.cs" />
+    <Compile Include="MachineHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecipeBlueprint.cs" />
     <Compile Include="SObjectBAI.cs" />
