--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -31,8 +31,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.3.18.2" />
-    <PackageReference Include="AWSSDK.Polly" Version="3.3.3.1" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.101.8" />
+    <PackageReference Include="AWSSDK.Polly" Version="3.3.101.11" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="2.2.0" />
     <PackageReference Include="Platonymous.Ogg2XNA">
       <Version>1.0.0</Version>
@@ -55,6 +55,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="config.json" />
+    <None Include="i18n\tr.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="i18n\it.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="i18n\fr.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="i18n\ko.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="i18n\zh.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
