--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -57,6 +57,9 @@
     <None Include="i18n\default.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="i18n\ko.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="i18n\zh.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
