Added korean translation

--- a/SeedBag/SeedBag.csproj
+++ b/SeedBag/SeedBag.csproj
@@ -49,6 +49,9 @@
     <None Include="i18n\default.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="i18n\ko.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="manifest.json" />
   </ItemGroup>
   <ItemGroup>
