--- a/Portraiture/manifest.json
+++ b/Portraiture/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Portraiture",
   "Author": "Platonymous",
-  "Version": "1.6.7",
+  "Version": "1.7.0",
   "Description": "Helper Mod for Portraits.",
   "UniqueID": "Platonymous.Portraiture",
   "EntryDll": "Portraiture.dll",
@@ -9,7 +9,8 @@
   "UpdateKeys": [ "Nexus:999" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.Toolkit"
+      "UniqueID": "Platonymous.Toolkit",
+      "MinimumVersion": "1.7.8"
     }
   ]
 }
