--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Overrides\OvLongevity.cs" />
     <Compile Include="Overrides\OvServer.cs" />
     <Compile Include="Overrides\OvSpritebatch.cs" />
+    <Compile Include="Overrides\OvSpritebatchNew.cs" />
     <Compile Include="Overrides\OvTV.cs" />
     <Compile Include="Overrides\OvSleep.cs" />
     <Compile Include="PlatoUI\PlatoUIGame.cs" />
