--- a/CustomFurniture/CustomFurniture.csproj
+++ b/CustomFurniture/CustomFurniture.csproj
@@ -34,7 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="2.2.0" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
+      <Version>3.0.0-beta.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PyTK\PyTK.csproj">
