--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -31,9 +31,11 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.3.101.8" />
-    <PackageReference Include="AWSSDK.Polly" Version="3.3.101.11" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="2.2.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.103.5" />
+    <PackageReference Include="AWSSDK.Polly" Version="3.3.101.35" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
+      <Version>3.0.0-beta.5</Version>
+    </PackageReference>
     <PackageReference Include="Platonymous.Ogg2XNA">
       <Version>1.0.0</Version>
     </PackageReference>
