--- a/Portraiture/Portraiture.csproj
+++ b/Portraiture/Portraiture.csproj
@@ -32,7 +32,9 @@
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="2.2.0" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
+      <Version>3.0.0-beta.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
