Fixes missing machine names, missing CJB Item Spawner items, and removes SMAPI log spam from CP API use.  Does not fix missing recipes on initial game load

--- a/PyTK/manifest.json
+++ b/PyTK/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "PyTK",
   "Author": "Platonymous",
-  "Version": "1.12.13",
+  "Version": "1.12.12-unofficial.1-minervamaga",
   "Description": "Platonymous Toolkit",
   "UniqueID": "Platonymous.Toolkit",
   "EntryDll": "PyTK.dll",
