--- a/ATM/manifest.json
+++ b/ATM/manifest.json
@@ -1,16 +1,16 @@
 ﻿{
-  "Name": "ATM",
-  "Author": "Platonymous",
-  "Version": "1.1.2",
-  "Description": "Adds an ATM to the Town",
-  "UniqueID": "Platonymous.ATM",
-  "EntryDll": "ATM.dll",
-  "MinimumApiVersion": "2.11.2",
-  "UpdateKeys": [ "Nexus:3135" ],
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit",
-      "MinimumVersion": "1.4.23"
-    }
-  ]
+    "Name": "ATM",
+    "Author": "Platonymous",
+    "Version": "1.1.3-unofficial.1-minervamaga",
+    "Description": "Adds an ATM to the Town",
+    "UniqueID": "Platonymous.ATM",
+    "EntryDll": "ATM.dll",
+    "MinimumApiVersion": "2.11.2",
+    "UpdateKeys": [ "Nexus:3135" ],
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit",
+            "MinimumVersion": "1.4.23"
+        }
+    ]
 }
