--- a/Arcade2048/manifest.json
+++ b/Arcade2048/manifest.json
@@ -1,15 +1,15 @@
 {
-  "Name": "Arcade 2048",
-  "Author": "Platonymous",
-  "Version": "1.1.1",
-  "Description": "Play 2048.",
-  "UniqueID": "Platonymous.2048",
-  "EntryDll": "Arcade2048.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:2048" ],
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit"
-    }
-  ]
+    "Name": "Arcade 2048",
+    "Author": "Platonymous",
+    "Version": "1.1.2-unofficial.1-minervamaga",
+    "Description": "Play 2048.",
+    "UniqueID": "Platonymous.2048",
+    "EntryDll": "Arcade2048.dll",
+    "MinimumApiVersion": "3.0.0",
+    "UpdateKeys": [ "Nexus:2048" ],
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit"
+        }
+    ]
 }
