--- a/CustomFurniture/manifest.json
+++ b/CustomFurniture/manifest.json
@@ -1,16 +1,16 @@
 {
-  "Name": "Custom Furniture",
-  "Author": "Platonymous",
-  "Version": "0.10.4",
-  "Description": "Helper Mod for Custom Furniture creation.",
-  "UniqueID": "Platonymous.CustomFurniture",
-  "EntryDll": "CustomFurniture.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:1254" ],
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit",
-      "MinimumVersion": "1.5.1"
-    }
-  ]
+    "Name": "Custom Furniture",
+    "Author": "Platonymous",
+    "Version": "0.10.5-unofficial.1-minervamaga",
+    "Description": "Helper Mod for Custom Furniture creation.",
+    "UniqueID": "Platonymous.CustomFurniture",
+    "EntryDll": "CustomFurniture.dll",
+    "MinimumApiVersion": "3.0.0",
+    "UpdateKeys": [ "Nexus:1254" ],
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit",
+            "MinimumVersion": "1.5.1"
+        }
+    ]
 }
