--- a/CustomFurnitureAnywhere/CustomFurnitureAnywhere.csproj
+++ b/CustomFurnitureAnywhere/CustomFurnitureAnywhere.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
-      <Version>3.0.0-beta.5</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
