--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "TMXLoader",
   "Author": "Platonymous",
-  "Version": "1.10.6",
+  "Version": "1.10.7-unofficial.1-minervamaga",
   "Description": "Load TMX Maps into the Game",
   "UniqueID": "Platonymous.TMXLoader",
   "EntryDll": "TMXLoader.dll",
