Fixed null error OnDayStarted.  Adjusted starting index for objects to avoid overlap with JA.  Added clothing support to TMXL shops.  Recompiled Custom Furniture and the bridge mods in an attempt to resolve some issues.

--- a/SeedBag/manifest.json
+++ b/SeedBag/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Seed Bag",
   "Author": "Platonymous",
-  "Version": "1.3.1",
+  "Version": "1.3.2-unofficial.1-minervamaga",
   "Description": "Adds a Seed Bag to the Game",
   "UniqueID": "Platonymous.SeedBag",
   "EntryDll": "SeedBag.dll",
