Make TMXLoader call Json Asset's API to fix IDs in custom locations. TMXLoader does all this after JA has already fixed IDs, so it needs to be explicitly called for the custom locations.

--- a/TMXLoader/TMXLoader.csproj
+++ b/TMXLoader/TMXLoader.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="BuildableEdit.cs" />
     <Compile Include="BuildableTranslation.cs" />
+    <Compile Include="Other\IJsonAssetsAPI.cs" />
     <Compile Include="SaveBuildable.cs" />
     <Compile Include="TMXAssetEditor.cs" />
     <Compile Include="Compatibility\CustomFarmTypes.cs" />
