PR to end all PR unofficial releases

--- a/CustomFarmingRedux/manifest.json
+++ b/CustomFarmingRedux/manifest.json
@@ -1,15 +1,15 @@
 {
-  "Name": "Custom Farming Redux",
-  "Author": "Platonymous",
-  "Version": "2.12.9",
-  "Description": "Mod for Custom Machine creation.",
-  "UniqueID": "Platonymous.CustomFarming",
-  "EntryDll": "CustomFarmingRedux.dll",
-  "UpdateKeys": [ "Nexus:991" ],
-  "MinimumApiVersion": "2.11.2",
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit"
-    }
-  ]
+    "Name": "Custom Farming Redux",
+    "Author": "Platonymous",
+    "Version": "2.12.9-unofficial.3-minervamaga",
+    "Description": "Mod for Custom Machine creation.",
+    "UniqueID": "Platonymous.CustomFarming",
+    "EntryDll": "CustomFarmingRedux.dll",
+    "UpdateKeys": [ "Nexus:991" ],
+    "MinimumApiVersion": "2.11.2",
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit"
+        }
+    ]
 }
