--- a/Arcade2048/manifest.json
+++ b/Arcade2048/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Arcade 2048",
   "Author": "Platonymous",
-  "Version": "1.1.2",
+  "Version": "1.1.2-unofficial.2-minervamaga",
   "Description": "Play 2048.",
   "UniqueID": "Platonymous.2048",
   "EntryDll": "Arcade2048.dll",
