--- a/JoJaBan/manifest.json
+++ b/JoJaBan/manifest.json
@@ -1,15 +1,15 @@
 ﻿{
-  "Name": "JoJaBan - Arcade Sokoban",
-  "Author": "Platonymous",
-  "Version": "0.4.6",
-  "Description": "Help JoJa clean up",
-  "UniqueID": "Platonymous.JoJaBan",
-  "EntryDll": "JoJaBan.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:3118" ],
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit"
-    }
-  ]
+    "Name": "JoJaBan - Arcade Sokoban",
+    "Author": "Platonymous",
+    "Version": "0.4.6-unofficial.2-minervamaga",
+    "Description": "Help JoJa clean up",
+    "UniqueID": "Platonymous.JoJaBan",
+    "EntryDll": "JoJaBan.dll",
+    "MinimumApiVersion": "3.0.0",
+    "UpdateKeys": [ "Nexus:3118" ],
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit"
+        }
+    ]
 }
