--- a/PyTK/manifest.json
+++ b/PyTK/manifest.json
@@ -1,20 +1,20 @@
 {
-  "Name": "PyTK",
-  "Author": "Platonymous",
-  "Version": "1.12.14",
-  "Description": "Platonymous Toolkit",
-  "UniqueID": "Platonymous.Toolkit",
-  "EntryDll": "PyTK.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:1726" ],
-  "Dependencies": [
-    {
-      "UniqueID": "Pathoschild.ContentPatcher",
-      "IsRequired": false
-    },
-    {
-      "UniqueID": "spacechase0.JsonAssets",
-      "IsRequired": false
-    }
-  ]
+    "Name": "PyTK",
+    "Author": "Platonymous",
+    "Version": "1.12.14-unofficial.3-minervamaga",
+    "Description": "Platonymous Toolkit",
+    "UniqueID": "Platonymous.Toolkit",
+    "EntryDll": "PyTK.dll",
+    "MinimumApiVersion": "3.0.0",
+    "UpdateKeys": [ "Nexus:1726" ],
+    "Dependencies": [
+        {
+            "UniqueID": "Pathoschild.ContentPatcher",
+            "IsRequired": false
+        },
+        {
+            "UniqueID": "spacechase0.JsonAssets",
+            "IsRequired": false
+        }
+    ]
 }
