--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -1,16 +1,16 @@
 {
-  "Name": "TMXLoader",
-  "Author": "Platonymous",
-  "Version": "1.10.7",
-  "Description": "Load TMX Maps into the Game",
-  "UniqueID": "Platonymous.TMXLoader",
-  "EntryDll": "TMXLoader.dll",
-  "UpdateKeys": [ "Nexus:1820" ],
-  "MinimumApiVersion": "3.0.0",
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.Toolkit",
-      "MinimumVersion": "1.10.0"
-    }
-  ]
+    "Name": "TMXLoader",
+    "Author": "Platonymous",
+    "Version": "1.10.7-unofficial.2-minervamaga",
+    "Description": "Load TMX Maps into the Game",
+    "UniqueID": "Platonymous.TMXLoader",
+    "EntryDll": "TMXLoader.dll",
+    "UpdateKeys": [ "Nexus:1820" ],
+    "MinimumApiVersion": "3.0.0",
+    "Dependencies": [
+        {
+            "UniqueID": "Platonymous.Toolkit",
+            "MinimumVersion": "1.10.0"
+        }
+    ]
 }
