--- a/ArcadePong/ArcadePong.csproj
+++ b/ArcadePong/ArcadePong.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj" />
+    <ProjectReference Include="..\PyTK\PyTK.csproj">
+      <Private>false</Private>
+    </ProjectReference>
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
