prep for tmxtile 1.1.6

--- a/common.targets
+++ b/common.targets
@@ -5,5 +5,8 @@
 
     <!-- don't add PyTK dependencies to other mod's releases -->
     <IgnoreModFilePatterns Condition="'$(MSBuildProjectName)' != 'PyTK'">DotNetZip\.(?:dll|pdb),PyTK\.(?:dll|pdb),0Harmony\.(?:dll|pdb), MoonSharp.Interpreter\.(?:dll|pdb), NCalc\.(?:dll|pdb),TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
+
+    <IgnoreModFilePatterns>TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
+
   </PropertyGroup>
 </Project>
